--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gen:keys": "tsx ./scripts/generateKeys.ts",
     "test:status": "tsx ./scripts/test-status-monitor.ts",
     "test:restart": "tsx ./scripts/test-restart.ts",
+    "fetch:message-history": "tsx ./scripts/fetch-message-history.ts",
     "lint": "yarn eslint examples/xmtp-flaunch",
     "start": "tsx src/main.ts",
     "start:old": "tsx index.ts"
